Physics_RT/Physics_RT/MathHeader.h

	typedef struct hkVector4* hkVector4Ref;
    typedef struct hkQuaternion* hkQuaternionRef;
    typedef struct hkMatrix3* hkMatrix3Ref;
    typedef struct hkRotation* hkRotationRef;
    HAVOK_C_API bool HAVOK_C_CALL hkQuaternion_isOk(hkQuaternionRef ptr, float epsilon = float(1e-3f));
    HAVOK_C_API hkMatrix3Ref HAVOK_C_CALL hkMatrix3_new();
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_delete(hkMatrix3Ref ptr);
    HAVOK_C_API hkVector4Ref HAVOK_C_CALL hkMatrix3_getColumn(hkMatrix3Ref ptr, int i);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_getRow(hkMatrix3Ref ptr, int row, hkVector4Ref r);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_setColumn0(hkMatrix3Ref ptr, hkVector4Ref c);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_setColumn1(hkMatrix3Ref ptr, hkVector4Ref c);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_setColumn2(hkMatrix3Ref ptr, hkVector4Ref c);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_setRows(hkMatrix3Ref ptr, hkVector4Ref r0, hkVector4Ref r1, hkVector4Ref r2);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_getRows(hkMatrix3Ref ptr, hkVector4Ref r0, hkVector4Ref r1, hkVector4Ref r2);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_setCols(hkMatrix3Ref ptr, hkVector4Ref c0, hkVector4Ref c1, hkVector4Ref c2);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_getCols(hkMatrix3Ref ptr, hkVector4Ref c0, hkVector4Ref c1, hkVector4Ref c2);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_setZero(hkMatrix3Ref ptr);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_setIdentity(hkMatrix3Ref ptr);
    HAVOK_C_API hkMatrix3Ref HAVOK_C_CALL hkMatrix3_getIdentity();
    HAVOK_C_API bool HAVOK_C_CALL hkMatrix3_isApproximatelyEqual(hkMatrix3Ref ptr, hkMatrix3Ref m, float epsilon = float(1e-3f));
    HAVOK_C_API bool HAVOK_C_CALL hkMatrix3_isSymmetric(hkMatrix3Ref ptr, float epsilon = float(1e-3f));
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_setCrossSkewSymmetric(hkMatrix3Ref ptr, hkVector4Ref r);
    HAVOK_C_API int8_t HAVOK_C_CALL hkMatrix3_invert(hkMatrix3Ref ptr, float epsilon);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_setInverseSymmetric(hkMatrix3Ref ptr, hkMatrix3Ref src);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_solveSymmetric(hkMatrix3Ref ptr, hkVector4Ref b, hkVector4Ref v);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_invertSymmetric(hkMatrix3Ref ptr);
    HAVOK_C_API float HAVOK_C_CALL hkMatrix3_frobeniusNormSqr(hkMatrix3Ref ptr);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_transpose(hkMatrix3Ref ptr);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_setTranspose(hkMatrix3Ref ptr, hkMatrix3Ref s);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_setMul(hkMatrix3Ref ptr, hkMatrix3Ref a, hkMatrix3Ref b);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_setMulInverse(hkMatrix3Ref ptr, hkMatrix3Ref a, hkRotationRef b);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_setMulInverseMul(hkMatrix3Ref ptr, hkRotationRef a, hkMatrix3Ref b);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_setMul_scale(hkMatrix3Ref ptr, float scale, hkMatrix3Ref a);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_setDiagonalMul(hkMatrix3Ref ptr, hkVector4Ref vDiag, hkMatrix3Ref a);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_addDiagonal(hkMatrix3Ref ptr, float diag);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_setTransposeMul(hkMatrix3Ref ptr, hkMatrix3Ref a, hkMatrix3Ref b);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_addMul(hkMatrix3Ref ptr, float scale, hkMatrix3Ref a);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_changeBasis(hkMatrix3Ref ptr, hkRotationRef t);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_add(hkMatrix3Ref ptr, hkMatrix3Ref a);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_sub(hkMatrix3Ref ptr, hkMatrix3Ref a);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_mul(hkMatrix3Ref ptr, hkMatrix3Ref a);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_mul_scale(hkMatrix3Ref ptr, float scale);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_operator_equal(hkMatrix3Ref ptr, hkMatrix3Ref a);
    HAVOK_C_API bool HAVOK_C_CALL hkMatrix3_isOk(hkMatrix3Ref ptr);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_multiplyVector(hkMatrix3Ref ptr, hkVector4Ref vectorIn, hkVector4Ref resultOut);
    HAVOK_C_API float HAVOK_C_CALL hkMatrix3_getDeterminant(hkMatrix3Ref ptr);
#define HK_FLOAT_EPSILON 1.192092896e-07F
    HAVOK_C_API int8_t HAVOK_C_CALL hkMatrix3_diagonalizeSymmetric(hkMatrix3Ref ptr, hkRotationRef eigenVec, hkVector4Ref eigenVal, int maxIter = 20, float epsilon = HK_FLOAT_EPSILON);
    HAVOK_C_API int8_t HAVOK_C_CALL hkMatrix3_diagonalizeSymmetricWarmStart(hkMatrix3Ref ptr, hkMatrix3Ref eigenVec, hkVector4Ref eigenVal, int maxIter = 20, float epsilon = HK_FLOAT_EPSILON);
    HAVOK_C_API void HAVOK_C_CALL hkMatrix3_diagonalizeSymmetricApproximation(hkMatrix3Ref ptr, hkRotationRef eigenVec, hkVector4Ref eigenVal, int maxIter = 10);
    HAVOK_C_API bool HAVOK_C_CALL hkRotation_isOrthonormal(hkRotationRef ptr, float epsilon = float(1e-5f));